# amazon_scraper

./: main.py  pyproject.toml  readme.md
